--- a/kitty.conf
+++ b/kitty.conf
@@ -79,7 +79,7 @@ mouse_hide_wait 3.0
 # The enabled window layouts. A comma separated list of layout names. The special value * means
 # all layouts. The first listed layout will be used as the startup layout.
 # For a list of available layouts, see the file layouts.py
-enabled_layouts stack,grid
+enabled_layouts grid,stack
 
 # If enabled, the window size will be remembered so that new instances of kitty will have the same
 # size as the previous instance. If disabled, the window will initially have size configured
@@ -214,6 +214,7 @@ map ctrl+shift+backspace restore_font_size
 
 # Hide the kitty window's title bar on macOS.
 macos_hide_titlebar no
+hide_window_decorations yes
 
 
 # Snazzy Colorscheme for Kitty
