--- a/kitty.conf
+++ b/kitty.conf
@@ -117,7 +117,7 @@ open_url_with default
 use_system_wcwidth yes
 
 en# The value of the TERM environment variable to set
-term xterm-kitty
+term xterm
 
 # The width (in pts) of window borders. Will be rounded to the nearest number of pixels based on screen resolution.
 window_border_width 1
